# styio

./: .gitignore  CMakeLists.txt  README.md  cmake_test_discovery_91969cb5ae.json  styio_security_test
.github/workflows/: ci.yml  nightly-fuzz.yml  nightly-sanitizers.yml  nightly-soak.yml
benchmark/: COVERAGE-MATRIX.md  README.md  perf-route.sh  styio_soak_test.cpp
docs/: AGENT-SPEC.md  BoundedRing-Codegen-Adjustment.md  CHECKPOINT-WORKFLOW.md  DOCUMENTATION-POLICY.md  INDEX.md  Logic-Conflicts.md  README.md  REFACTOR-WORKFLOW-TEMPLATE.md  Resource-Topology-v2-Implementation-Plan.md  Styio-EBNF.md  Styio-Language-Design.md  Styio-Research-Innovations.md  Styio-Resource-Driver.md  Styio-Resource-Topology.md  Styio-StdLib-Intrinsics.md  Styio-Symbol-Reference.md  THIRD-PARTY.md  idea.md
docs/adr/: ADR-0001-checkpoint-process.md  ADR-0002-jsonl-diagnostics.md  ADR-0003-llvm-ownership-boundary.md  ADR-0004-unicode-facade.md  ADR-0005-runtime-path-compat-and-error-flag.md  ADR-0006-session-reset-and-ast-attach-boundary.md  ADR-0007-expr-node-raii-binop-bincomp.md  ADR-0008-expr-node-raii-cond.md  ADR-0009-expr-node-raii-wave-fallback-selectors.md  ADR-0010-expr-node-raii-func-call.md  ADR-0011-expr-node-raii-listop-attr.md  ADR-0012-expr-node-raii-fmtstr-typeconvert-range-sizeof.md  ADR-0013-expr-node-raii-tuple-list-set.md  ADR-0014-stmt-node-raii-return-bind.md  ADR-0015-stmt-node-raii-resource-io.md  ADR-0016-stmt-node-raii-var-family.md  ADR-0017-stmt-node-raii-struct-resource.md  ADR-0018-soak-single-thread-framework.md  ADR-0019-soak-tiering-and-rss-guard.md  ADR-0020-soak-regression-artifact-workflow.md  ADR-0021-parser-engine-shadow-routing.md  ADR-0022-parser-lookahead-shared-utils.md  ADR-0023-parser-expr-subset-shadow-guard.md  ADR-0024-parser-stmt-subset-print-shadow.md  ADR-0025-parser-stmt-subset-flexbind-and-call-fallback.md  ADR-0026-parser-final-bind-subset-and-safe-fallback.md  ADR-0027-parser-shadow-compare-mode.md  ADR-0028-parser-compound-assign-subset.md  ADR-0029-parser-shadow-full-m1-and-bool-literal-alignment.md  ADR-0030-parser-shadow-artifact-recording.md  ADR-0031-parser-default-switch-gate.md  ADR-0032-parser-shadow-budget-script.md  ADR-0033-parser-compare-logic-subset-alignment.md  ADR-0034-refactor-template-shadow-gate-pattern.md  ADR-0035-parser-simple-call-subset-and-dot-fallback.md  ADR-0036-parser-dot-call-subset-with-chain-fallback.md  ADR-0037-parser-shadow-summary-artifact.md  ADR-0038-parser-dot-chain-rejection-boundary.md  ADR-0039-parser-function-def-entry-subset.md  ADR-0040-parser-m2-shadow-gate.md  (+79 more)
docs/assets/: INDEX.md  README.md
docs/assets/templates/: README.md  REFACTOR-WORKFLOW-TEMPLATE.md
docs/design/: INDEX.md  README.md  Styio-EBNF.md  Styio-Language-Design.md  Styio-Research-Innovations.md  Styio-Resource-Driver.md  Styio-Resource-Topology.md  performance-testing.md
docs/for-ide/: BUILD.md  CXX-API.md  LSP.md  README.md  TESTING.md  TREE-SITTER.md
docs/history/: 2026-03-28.md  2026-03-29.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  INDEX.md  README.md
docs/milestones/: 00-Milestone-Index.md  INDEX.md  M1-Foundation.md  M5-ResourcesIO.md  M6-StateAndStreams.md  M7-MultiStream.md  README.md
docs/plans/: BoundedRing-Codegen-Adjustment.md  Early-Ideas.md  IDE-Incremental-Edits-and-Semantic-Query-Cache-Implementation-Plan.md  INDEX.md  README.md  Resource-Topology-v2-Implementation-Plan.md  Standard-Streams-Plan.md  idea.md  stdin-stdout-stderr.md
docs/review/: INDEX.md  Logic-Conflicts.md  README.md
docs/specs/: AGENT-SPEC.md  DOCUMENTATION-POLICY.md  INDEX.md  README.md  THIRD-PARTY.md
docs/tests/: FIVE-LAYER-PIPELINE.md  TEST-CATALOG.md
sample/: cli_calculator.sh
scripts/: checkpoint-health.sh  docs-audit.py  docs-index.py  parser-legacy-entry-audit.sh  parser-shadow-m1-gate.sh  parser-shadow-suite-gate.sh  soak-minimize.sh
src/: main.cpp
src/StyioAST/: AST.hpp  ASTDecl.hpp  add_new_ast.md
src/StyioAnalyzer/: ASTAnalyzer.hpp  ToStyioIR.cpp  TypeInfer.cpp
src/StyioCodeGen/: CodeGen.cpp  CodeGenG.cpp  CodeGenIO.cpp  CodeGenPulse.cpp  CodeGenVisitor.hpp  GetTypeG.cpp
src/StyioExtern/: ExternLib.cpp  ExternLib.hpp
src/StyioIDE/: CompilerBridge.cpp  CompilerBridge.hpp  SemDB.cpp  Syntax.cpp  Syntax.hpp  TreeSitterBackend.cpp  TreeSitterBackend.hpp
src/StyioIR/: IRDecl.hpp
src/StyioJIT/: StyioJIT_ORC.hpp
src/StyioParser/: NewParserExpr.cpp  NewParserExpr.hpp  Parser.cpp  Parser.hpp  Tokenizer.cpp
src/StyioRuntime/: HandleTable.hpp
src/StyioSession/: CompilationSession.hpp
src/StyioTesting/: PipelineCheck.cpp  PipelineCheck.hpp
src/StyioToString/: ToString.cpp  ToStringVisitor.hpp
src/StyioToken/: Token.cpp  Token.hpp
src/StyioUtil/: BoundedType.hpp
templates/universal-design-dev-workflow/: ENTRY.md  README.md
tests/: .lit_test_times.txt  CMakeLists.txt  styio_test.cpp
tests/fuzz/: CMakeLists.txt  README.md  fuzz_parser.cpp
tests/ide/: styio_ide_test.cpp
tests/lit_cases/parsing/resources/: explaination.md
tests/m2/: EXPECTED.txt
tests/m7/: t01_zip_collections.styio
tests/milestones/m10/: e04_handle_acquire_stdin.styio
tests/milestones/m7/: t02_zip_unequal.styio
tests/pipeline_cases/p01_print_add/expected/: tokens.txt
tests/pipeline_cases/p02_simple_func/expected/: ast.txt  llvm_ir.txt
tests/pipeline_cases/p04_read_file/expected/: ast.txt
tests/pipeline_cases/p05_snapshot_accum/: input.styio
tests/pipeline_cases/p05_snapshot_accum/expected/: ast.txt  llvm_ir.txt  styio_ir.txt  tokens.txt
tests/pipeline_cases/p06_zip_files/expected/: llvm_ir.txt
tests/pipeline_cases/p09_full_pipeline/expected/: llvm_ir.txt
tests/pipeline_cases/p10_auto_detect_read/expected/: ast.txt
tests/pipeline_cases/p11_pipe_func/expected/: ast.txt  llvm_ir.txt
tests/pipeline_cases/p13_stdin_transform/expected/: llvm_ir.txt
tests/pipeline_cases/p14_stdin_pull/expected/: llvm_ir.txt
tests/security/: styio_security_test.cpp
tests/soak/: README.md  REGRESSION-TEMPLATE.md  styio_soak_test.cpp
tests/soak/regressions/: README.md
(+58 files in other folders)
